# ss-cxx-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: GoogleTestAdd.cmake
examples/: CMakeLists.txt  main.cpp
include/: YourLib
src/: CMakeLists.txt  your_lib.cpp  your_lib.h
test/: CMakeLists.txt  main.cpp
